--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
-  <title>Which Language?</title>
+  <title>Beep Boop Neighbor</title>
 </head>
 <body>
   <div class="container">
@@ -17,5 +17,9 @@
       <button type="submit">Submit</button>
     </form>
     <p id="showResults"></p>
-    <button class="click" id="refresh">again!</button>
+    <div id="hideReset" class ="hidden">
+      <button class="click" id="refresh">again!</button>
+    </div>
   </div>
+  </body>
+  </html>
