Use setInterval method to print string elements on 250 ms intervals

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
       <input id="number" type="text"><br>
       <button type="submit">Submit</button>
     </form>
-    <p id="showResults"></p>
+    <div class="jumbotron">
+      <h2 id="bigShow"></h2>
+    </div>
     <div id="hideReset" class ="hidden">
       <button class="click" id="refresh">again!</button>
     </div>
+    <p id="showResults"></p>
   </div>
   </body>
   </html>
